fix for scrollbar on small displays, use an odd number to show mac users that there is more text

--- a/public/css/mindmap.css
+++ b/public/css/mindmap.css
@@ -6,7 +6,7 @@ html, body {
   min-height: 100%;
 }
 #modalHelp .modal-body {
-  max-height:none;
+  max-height:307px;
 }
 #toolbarSocial {
   margin-right: 20px;
